// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <GifExpertAPP/> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpert
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Simpsons"
      key="Simpsons"
    />
    <GifGrid
      category="godzilla"
      key="godzilla"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en el <GifExpertAPP/> se debe mostrar correctamente 1`] = `
<Fragment>
  <h2>
    GifExpert
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
